brat/test/golden/error/bad_rpat.brat.golden
Error in test/golden/error/bad_rpat.brat@FC {start = Pos {line = 2, col = 8}, end = Pos {line = 2, col = 19}}:
test = cons(1, [])
       ^^^^^^^^^^^

  "cons" is not a valid constructor for type Bool

